🐛 Fixed nunjuck logic issue for dark mode

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -312,6 +312,7 @@ img {
 
 .bg-emeraldgreen {
 	background: $emerald-green;
+	color: $white;
 }
 
 .bg-blushpink {
